# Head-Unit-Team1

./: .gitignore  README.md
Function_Prototpye/: README.md
Function_Prototpye/Audio/: extract_cover.py  qml.qrc  usbscanner.cpp
Function_Prototpye/Function_Prototpye/Audio/: CMakeLists.txt  main.cpp  main.qml  mp3player.cpp  usbscanner.h
Function_Prototpye/Function_Prototpye/build-Audio-Desktop-Debug/: Audio  Audio.cbp  CMakeCache.txt  Makefile  cmake_install.cmake  extract_cover.py
Function_Prototpye/Function_Prototpye/build-Audio-Desktop-Debug/Audio_autogen/: mocs_compilation.cpp
Function_Prototpye/build-Audio-Desktop-Debug/Audio_autogen/: moc_predefs.h
Google_map_example/: CMakeLists.txt
HU_App/Head_Unit_app/: AppWidget.qml  CMakeLists.txt  CarWidget.qml  HomeWidget.qml  InfoWidget.qml  MusicApplication.qml  main.cpp  main.qml  qml.qrc
HU_App/json/: HU.json
HU_app_someip/: HU.sh
HU_app_someip/Head_Unit_app/: CMakeLists.txt  CarWidget.qml  MusicApplication.qml  carInfoController.cpp  carInfoController.h
HU_app_someip/fidl/: IC.fdepl  IC.fidl
Head_Unit_app/: AppWidget.qml  CMakeLists.txt  CarWidget.qml  GearBox.qml  GearBoxWindow.qml  GearText.qml  GearWidget.qml  MapApplication.qml  MapWidget.qml  MenuButton.qml  MenuWindow.qml  VideoApplication.qml  main.cpp  main.qml  mapController.cpp  qml.qrc  resource.qrc  weather.cpp  youtubeController.cpp
Head_Unit_app/Head_Unit_app/: CMakeLists.txt  DrivingModeApplication.qml  HomeWidget.qml  MapApplication.qml  MapWidget.qml  MenuWindow.qml  MusicApplication.qml  VideoApplication.qml  WeatherApplication.qml  carInfoController.h  gearController.h  main.qml  mapController.cpp  qml.qrc  resource.qrc  weather.cpp  weather.h  youtubeController.cpp
Head_Unit_app/Head_Unit_app/json/: HU.json
Weather_example/: mainwindow.cpp
function_example/Google_map_example/: main.cpp  map.html
function_example/Weather_example/: CMakeLists.txt  mainwindow.h  mainwindow.ui  weather.html
function_example/youtube_example_2/: CMakeLists.txt  InfoWindow.qml  main.cpp  main.qml  mainwindow.cpp  mainwindow.h  qml.qrc
qt with vsomeip/: change_ip.py  set_ip.sh
qt with vsomeip/HU_client/: READ.md
qt with vsomeip/HU_client/HU_someip/: HU.sh
qt with vsomeip/HU_client/HU_someip/HU_someip/: CMakeLists.txt  battery.cpp  gear.cpp  gear.h  main.cpp  main.qml  myworker.cpp  myworker.h
qt with vsomeip/HU_client/HU_someip/build-HU_someip-Desktop-Debug/: CMakeCache.txt  IC_someip  IC_someip.cbp  Makefile  cmake_install.cmake
qt with vsomeip/HU_client/HU_someip/fidl/: IC.fdepl  IC.fidl
qt with vsomeip/HU_client/HU_someip/json/: HU.json
qt with vsomeip/IC_server/: README.md
qt with vsomeip/IC_server/IC_someip/IC_someip/: CMakeLists.txt  ICStubImpl.cpp  ICStubImpl.h  battery.cpp  battery.h  main.cpp  vehiclecomponents.h
qt with vsomeip/IC_server/IC_someip/build-IC_someip-Desktop-Debug/: CMakeCache.txt  IC_someip.cbp
qt with vsomeip/IC_server/IC_someip/fidl/: IC.fdepl  IC.fidl
qt with vsomeip/IC_server/IC_someip/json/: IC.json
qt with vsomeip/IC_someip/: ic1.sh
qt with vsomeip/IC_someip/IC_someip/: CMakeLists.txt  ICStubImpl.cpp  ICStubImpl.h  battery_gauge.cpp  gear.cpp  get_battery.cpp  ic_interstubimpl.h  main.cpp  main.qml  qml.qrc  receiver.cpp
qt with vsomeip/IC_someip/build-IC_someip-Desktop-Debug/: CMakeCache.txt  IC_someip  IC_someip.cbp  Makefile  cmake_install.cmake
qt with vsomeip/IC_someip/build-IC_someip-Desktop-Debug/IC_someip_autogen/: mocs_compilation.cpp
qt with vsomeip/IC_someip/fidl/: IC.fdepl  IC_inter.fdepl  IC_inter.fidl
qt with vsomeip/IC_someip/json/: IC.json
qt with vsomeip/gamePadddd/: ic.sh
qt with vsomeip/gamePadddd/build-gamePaddddd-Desktop-Debug/: CMakeCache.txt  Makefile  cmake_install.cmake  gamePaddddd  gamePaddddd.cbp
qt with vsomeip/gamePadddd/build-gamePaddddd-Desktop-Debug/IC_sdervice-someip_autogen/: moc_predefs.h
qt with vsomeip/gamePadddd/build-gamePaddddd-Desktop-Debug/IC_service-someip_autogen/: moc_predefs.h
qt with vsomeip/gamePadddd/build-gamePaddddd-Desktop-Debug/gamePaddddd-someip_autogen/: moc_predefs.h
qt with vsomeip/gamePadddd/build-gamePaddddd-Desktop-Debug/gamePaddddd_autogen/: mocs_compilation.cpp
qt with vsomeip/gamePadddd/build-gamePaddddd-Desktop-Debug/gamepaddd-someip_autogen/: moc_predefs.h
qt with vsomeip/gamePadddd/build-gamePaddddd-Desktop-Debug/gamepaddddd-someip_autogen/: moc_predefs.h
qt with vsomeip/gamePadddd/gamePaddddd/: CMakeLists.txt  gear.cpp  gear.h  lrsign.cpp  lrsign.h  main.cpp  main.qml
qt with vsomeip/piracer_vsomeip/build-piracer_vsomeip-Desktop-Debug/: CMakeCache.txt  Makefile  PiRacer-cpp.cbp  cmake_install.cmake  forward_backward_left_right  gamepad_control  read_battery
qt with vsomeip/piracer_vsomeip/piracer_vsomeip/: CMakeLists.txt  vsomeip.h
qt with vsomeip/piracer_vsomeip/piracer_vsomeip/Gamepad/: ShanwanGamepad.cpp
qt with vsomeip/piracer_vsomeip/piracer_vsomeip/examples/: gamepad_control.cpp
someip_basic/someip_server_example/: CMakeLists.txt  server_config.json
someip_basic/someip_server_example/fidl/: HelloWorld.fdepl
someip_basic/someip_server_example/src/: HelloWorldService.cpp
yocto/meta-WiFi/conf/: layer.conf
yocto/meta-WiFi/recipes-core/: WiFi.bb
yocto/meta-WiFi/recipes-core/files/: interfaces  wpa_supplicant.conf
yocto/meta-display/conf/: layer.conf
yocto/meta-hu/conf/: layer.conf
yocto/meta-hu/recipes-core/: headunit.bb
yocto/meta-piracer/conf/: layer.conf
yocto/meta-piracer/recipes-core/: piracer-cpp-autoexec.bb  piracer-cpp.bb  piracer-modified-10-14.bb  piracer-modified-10-14.bbappend  piracer-modified-10-17-nobuild.bb  piracer-modified-10-17.bb  piracer.bb
yocto/meta-qt5/coin/: module_config.yaml
yocto/meta-qt5/conf/: layer.conf
yocto/meta-splash/conf/: layer.conf
yocto/meta-splash/recipes-bsp/: splash.bb
yocto/meta-splash/recipes-core/: playvideo.bb
yocto/meta-team1/conf/: layer.conf
yocto/meta-team1/recipes-qt5-config/: qt5-config.bb
yocto/meta-ui/recipes-hu/: headunit.bb
yocto/meta-ui/recipes-ic/: instrumentcluster-autoexec.bb  instrumentcluster.bb
(+243 files in other folders)
